# tp-spring/openapi.yaml
@@ -14,6 +14,8 @@ tags:
 paths:
   /private/todo/hello:
     get:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       responses:
@@ -21,6 +23,8 @@ paths:
           description: Success
   /private/todo/todo:
     get:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       responses:
@@ -31,6 +35,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Todo'
     post:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       requestBody:
@@ -47,6 +53,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Todo'
     put:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       requestBody:
@@ -66,6 +74,8 @@ paths:
           description: Invalid ID supplied
   /private/todo/todo/{id}:
     patch:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       parameters:
@@ -88,6 +98,8 @@ paths:
         '400':
           description: Invalid ID supplied
     delete:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       parameters:
@@ -106,6 +118,8 @@ paths:
 
   /private/todo/title:
     get:
+      security:
+        - CookieAuth: []
       tags:
         - todo
       parameters:
@@ -289,12 +303,8 @@ components:
         pwd:
           type: string
   securitySchemes:
-    BasicAuth:
-      type: http
-      scheme: basic
-      description: Use email/username and password to authenticate.
     CookieAuth:
       type: apiKey
       in: cookie
-      name: session
+      name: JSESSIONID
       description: Use a session cookie to authenticate (see /login).
